# incommodities-case-crunch-2026

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_PLAN.md  FINALS_GUIDE.md  PIPELINE.md  README.md  SCORES.md  best_hyperparameters.yaml  config.yaml  main.py  pyproject.toml
configs/: hp_cnn_lstm.yaml
docs/: FEATURE_ENGINEERING.md  FINDINGS.md  SCORES.md  Subject.md  context.md  scores.md
notebooks/: 01_eda.ipynb  02_eda_deep_dives.ipynb  02_feature_engineering.ipynb  03_feature_selection.ipynb  03_optimization_landscape.ipynb  04_catboost.ipynb  04_catboost_experiments.ipynb  04_catboost_results.ipynb  04_feature_analysis.ipynb  04_temporal_segmentation.ipynb  05_basis_modeling.ipynb  05_fr_error_diagnostic.ipynb  05_level_profile_decomposition.ipynb  06_basis_modeling.ipynb  06_results_recap.ipynb  06_temporal_segmentation.ipynb  07_results_recap.ipynb  08_level_profile_decomposition.ipynb
outputs/: best_parameters.yaml  ensemble_experiments_summary.md  final_pipeline_v10_results.json  final_pipeline_v8_results.json  final_pipeline_v9_results.json  optuna_study.db  optuna_trials.json  submission.csv  submission_attack_averaged.csv  submission_v8.csv  submission_v9.csv  submission_v9_v7params.csv
scripts/: add_analysis_cells.py  attack_winter_holdout.py  attack_winter_holdout_fulldata.py  calculate_real_rmse_all_submissions.py  compare_detrending.py  ensemble_v12_multimodel_hourly.py  ensemble_v13_stacking.py  ensemble_v14_diverse_hyperparams.py  ensemble_v15_xgb_focus.py  ensemble_v16_deep_xgb.py  eval_submissions.py  feature_reselection.py  final_pipeline.py  final_pipeline_v10.py  final_pipeline_v11.py  final_pipeline_v12.py  final_pipeline_v17.py  final_pipeline_v8.py  final_pipeline_v9.py  finals_inference_v2.py  (+16 more)
(+148 files in other folders)
