[project]
name = "incommodities-cc-2026"
version = "0.1.0"
description = "State-of-the-art Electricity Price Forecasting (EPF) pipeline for the InCommodities Case Crunch 2026"
readme = "AGENTS.md"
requires-python = ">=3.10"

dependencies = [
    # Core Data & Math
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # Statistical & Base ML (For LEAR, Scaling, and DM Tests)
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    # Advanced Tree Models (For volatility and calendar features)
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    # Deep Learning (Required by the epftoolbox _dnn.py implementation)
    "tensorflow>=2.13.0",
    # Bayesian Hyperparameter Optimization (For TPE algorithm)
    "hyperopt>=0.2.7",
    # Explainability & Visualizations (For DM test plots and SHAP)
    "shap>=0.42.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Notebook environment for EDA
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "torch>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
