[project]
name = "incommodities-case-crunch-2026"
version = "0.1.0"
description = "InCommodities Case Crunch 2026 - Electricity Price Forecasting (FR + UK)"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "catboost>=1.2",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "holidays>=0.40",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
]
